@@ -1,3 +1,9 @@
+2003/11/29 18:15 (+0100) ebassi
+
+	* t/*: updated tests for constants modules change, and for unused
+	  variables.
+	* Makefile.PL: put constants modules in the right place.
+
 2003/11/28 23:20 (+0100) ebassi
 
 	* xs/GnomePrint2.xs: added methods:
